[gd_scene load_steps=3 format=3 uid="uid://boe4xjas5loxs"]

[ext_resource type="PackedScene" uid="uid://beq470isdtevf" path="res://Scenes/Bodies/Enemies/Static/Default_turret.tscn" id="1_bbvc3"]
[ext_resource type="Script" uid="uid://yh6im74dx2ho" path="res://Scripts/AI/Enemies/Static/Turret_AI.gd" id="1_mggn3"]

[node name="Default_turret" type="Node2D"]
script = ExtResource("1_mggn3")

[node name="Turret_body" parent="." groups=["Without_spikes"] instance=ExtResource("1_bbvc3")]
rotation = 3.14159
scale = Vector2(1, -1)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="Turret_body"]
self_modulate = Color(1, 1, 1, 0)
z_index = -125
scale = Vector2(19.6, 14.1)
enable_node_path = NodePath("../..")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="reload_ended" from="Turret_body" to="." method="_on_reload_ended"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
